feat: show hostname on tmux status bar

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -80,9 +80,9 @@ set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]
 set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default]) "
 
 set -g status-left-length 25
-set -g status-left "#[fg=blue,bold,bg=default] #S" # session
-set -ga status-left "#[fg=white,none,bg=default] on " # session
-set -ga status-left "#[fg=cyan,bold,bg=default]m1 " # session
+set -g status-left "#[fg=blue,bold,bg=default] #S" # session name
+set -ga status-left "#[fg=white,none,bg=default] on "
+set -ga status-left "#[fg=cyan,bold,bg=default]#H " # append host name
 
 set -g status-right "#{cpu_fg_color}#{cpu_percentage} #[fg=white,none]#{cpu_icon} "
 set -ga status-right "#[fg=blue,bg=default]%l:%M%p" # append time 
