--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -79,14 +79,16 @@ set -g pane-border-style "fg=brightblack,bg=default"
 set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default]) "
 set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default]) "
 
-set -g status-left-length 25
-set -g status-left "#[fg=blue,bold,bg=default] #S" # session name
-set -ga status-left "#[fg=white,none,bg=default] on "
-set -ga status-left "#[fg=cyan,bold,bg=default]#H " # append host name
+set -g status-left-length 30
+set -g status-left "#[fg=blue,bold,bg=default] #S " # session name
 
+set -g status-right-length 50
 set -g status-right "#{cpu_fg_color}#{cpu_percentage} #[fg=white,none]#{cpu_icon} "
+set -ga status-right "#[fg=cyan,bold,bg=default]#H" # append host name
+set -ga status-right "#[fg=white,none,bg=default] at "
 set -ga status-right "#[fg=blue,bg=default]%l:%M%p" # append time 
-set -ga status-right "#[fg=white,none,bg=default] on #[fg=yellow,bg=default]%a, %b %d " # append date
+set -ga status-right "#[fg=white,none,bg=default] on "
+set -ga status-right "#[fg=yellow,bg=default]%a, %b %d " # append date
 
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
