feat: adjust tmux status bar, add apple icon

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -80,11 +80,12 @@ set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]
 set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default]) "
 
 set -g status-left-length 30
-set -g status-left "#[fg=blue,bold,bg=default] #S " # session name
+set -g status-left "#[fg=white,bold,bg=default] "
+set -ga status-left "#[fg=blue,bold,bg=default] #S " # session name
 
 set -g status-right-length 50
 set -g status-right "#{cpu_fg_color}#{cpu_percentage} #[fg=white,none]#{cpu_icon} "
-set -ga status-right "#[fg=cyan,bold,bg=default]#H" # append host name
+set -ga status-right "#[fg=cyan,none,bg=default]#H"
 set -ga status-right "#[fg=white,none,bg=default] at "
 set -ga status-right "#[fg=blue,bg=default]%l:%M%p" # append time 
 set -ga status-right "#[fg=white,none,bg=default] on "
