--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -49,6 +49,7 @@ bind C-l resize-pane -R 5
 bind C-n next-window
 bind C-p previous-window
 bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
+bind f run-shell "tmux popup -w90% -h90% -KER 'lf'"
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
