--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -78,20 +78,15 @@ set -g status-bg black
 set -g status-position "bottom"
 set -g pane-active-border-style "fg=green,bg=black"
 set -g pane-border-style "fg=brightblack,bg=default"
-set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default]) "
-set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default]) "
+set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
+set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
 
 set -g status-left-length 30
-set -g status-left "#[fg=white,bold,bg=default] "
-set -ga status-left "#[fg=blue,bold,bg=default] #S " # session name
+set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
 
 set -g status-right-length 50
-set -g status-right "#{cpu_fg_color}#{cpu_percentage} #[fg=white,none]#{cpu_icon} "
-set -ga status-right "#[fg=cyan,none,bg=default]#H"
-set -ga status-right "#[fg=white,none,bg=default] at "
-set -ga status-right "#[fg=blue,bg=default]%l:%M%p" # append time 
-set -ga status-right "#[fg=white,none,bg=default] on "
-set -ga status-right "#[fg=yellow,bg=default]%a, %b %d " # append date
+set -g status-right "#[fg=white,bold,bg=default]%l:%M %a, %b %d " # append time 
+set -ga status-right "#[fg=black,bold,bg=white]  "
 
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
@@ -99,9 +94,7 @@ set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 # Plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
-set -g @plugin 'laktak/extrakto'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
-set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tpm'
 
 # Plugins Initialization (end of file)
