--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -75,7 +75,7 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # Theme
 set -g status-bg black
-set -g status-position "bottom"
+set -g status-position top 
 set -g pane-active-border-style "fg=green,bg=black"
 set -g pane-border-style "fg=brightblack,bg=default"
 set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
