cleanup: remove comments

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -6,8 +6,8 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 set -g history-limit 1000000
 
 # base settings
-set -g clock-mode-style 12 # or '24'
-set -g focus-events on # or 'off'
+set -g clock-mode-style 12
+set -g focus-events on
 set -g history-limit 50000
 set -g status-keys vi
 set -gs escape-time 0 # TODO investigate `-s` flag
@@ -86,7 +86,7 @@ set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
 
 set -g status-right-length 50
 set -g status-right "#[fg=white,bold,bg=default]%l:%M %a, %b %d " # append time 
-set -ga status-right "#[fg=black,bold,bg=white]  "
+set -ga status-right "#[fg=black,bold,bg=white]  m1 "
 
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
