feat[tmux]: make status bar transparent

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -74,7 +74,7 @@ bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
 
 # Theme
-set -g status-bg black
+set -g status-style 'bg=default,fg=white' # transparent status bar
 set -g status-position top 
 set -g pane-active-border-style "fg=green,bg=black"
 set -g pane-border-style "fg=brightblack,bg=default"
