feat[tmux]: make border style match magit (white/green)

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -76,8 +76,8 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # Theme
 set -g status-style 'bg=default,fg=white' # transparent status bar
 set -g status-position top 
-set -g pane-active-border-style "fg=white,bg=default"
-set -g pane-border-style "fg=brightblack,bg=default"
+set -g pane-active-border-style "fg=green,bg=default"
+set -g pane-border-style "fg=white,bg=default"
 set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
 set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
 
