fix[yabai]: cleanup focus commands that don't work

--- a/mackup/.skhdrc
+++ b/mackup/.skhdrc
@@ -1,3 +1,5 @@
+# TODO https://github.com/koekeishiya/yabai/issues/725
+
 # focus window
 alt - h : yabai -m window --focus west
 alt - j : yabai -m window --focus south
@@ -34,26 +36,13 @@ alt - t : yabai -m window --toggle float;\
 alt - e : yabai -m window --toggle split
 
 # move window and focus desktop
-# TODO: currently disabled because script addition doesn't work on m1 (yet)
-# https://github.com/koekeishiya/yabai/issues/725#issuecomment-786996503
-#alt - 1 : yabai -m space --focus 1
-#alt - 2 : yabai -m space --focus 2
-#alt - 3 : yabai -m space --focus 3
-#alt - 4 : yabai -m space --focus 4
-#alt - 5 : yabai -m space --focus 5
-#alt - 6 : yabai -m space --focus 6
-#alt - 7 : yabai -m space --focus 7
-#alt - 8 : yabai -m space --focus 8
-#alt - 9 : yabai -m space --focus 9
-
-# move window and focus desktop
 shift + alt - 0 : yabai -m space --balance
-shift + alt - 1 : yabai -m window --space 1; yabai -m space --focus 1
-shift + alt - 2 : yabai -m window --space 2; yabai -m space --focus 2
-shift + alt - 3 : yabai -m window --space 3; yabai -m space --focus 3
-shift + alt - 4 : yabai -m window --space 4; yabai -m space --focus 4
-shift + alt - 5 : yabai -m window --space 5; yabai -m space --focus 5
-shift + alt - 6 : yabai -m window --space 6; yabai -m space --focus 6
-shift + alt - 7 : yabai -m window --space 7; yabai -m space --focus 7
-shift + alt - 8 : yabai -m window --space 8; yabai -m space --focus 8
-shift + alt - 9 : yabai -m window --space 9; yabai -m space --focus 9
+shift + alt - 1 : yabai -m window --space 1
+shift + alt - 2 : yabai -m window --space 2
+shift + alt - 3 : yabai -m window --space 3
+shift + alt - 4 : yabai -m window --space 4
+shift + alt - 5 : yabai -m window --space 5
+shift + alt - 6 : yabai -m window --space 6
+shift + alt - 7 : yabai -m window --space 7
+shift + alt - 8 : yabai -m window --space 8
+shift + alt - 9 : yabai -m window --space 9
