fix[tmux]: set default shell by OS

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -2,7 +2,9 @@
 set-option -g default-terminal "screen-256color"
 set-option -sa terminal-overrides ',xterm-256color:RGB'
 
-set -g default-shell /home/linuxbrew/.linuxbrew/bin/fish
+# set default shell by OS
+if-shell "uname | grep -q Darwin" "set -g default-shell /opt/homebrew/bin/fish"
+if-shell "uname | grep -q Linux" "set -g default-shell /home/linuxbrew/.linuxbrew/bin/fish"
 
 # very large history
 set -g history-limit 1000000
