--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -89,8 +89,11 @@ set -g status-left-length 30
 set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
 
 set -g status-right-length 50
-set -g status-right "#[fg=cyan,bold,bg=default]%l:%M %a, %b %d "
-set -ga status-right "#[fg=black,bold,bg=cyan]  "
+if-shell "uname | grep -q Linux" "set -g status-right '#[fg=cyan,bold,bg=default]%l:%M %a, %b %d '"
+if-shell "uname | grep -q Linux" "set -ga status-right '#[fg=black,bold,bg=cyan]  '"
+
+if-shell "uname | grep -q Darwin" "set -g status-right '#[fg=white,bold,bg=default]%l:%M %a, %b %d '"
+if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=black,bold,bg=white]  '"
 
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
