feat[yabai]: ignore Creative Cloud app from window manager

--- a/mackup/.yabairc
+++ b/mackup/.yabairc
@@ -45,5 +45,6 @@ yabai -m rule --add app="^Archive Utility$" manage=off
 yabai -m rule --add app="^Wally$" manage=off
 yabai -m rule --add app="^Pika$" manage=off
 yabai -m rule --add app="^balenaEtcher$" manage=off
+yabai -m rule --add app="^Creative Cloud$" manage=off
 
 echo "~/.yabai config loaded successfully"
