feat[tmux]: add node remote plugin

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -99,6 +99,7 @@ if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=black,bold,bg=whit
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 
 # Plugins
+set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
