--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -53,6 +53,7 @@ bind C-l resize-pane -R 5
 bind C-n next-window
 bind C-p previous-window
 bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
+bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
 bind S new-window -c "#{pane_current_path}" -n "spotify" spt
 bind f run-shell "tmux popup -w90% -h90% -KER 'lf'"
 bind h select-pane -L
