--- a/mackup/.config/alacritty/alacritty.yml
+++ b/mackup/.config/alacritty/alacritty.yml
@@ -45,4 +45,5 @@ key_bindings:
   - { key: Semicolon, mods: Command, chars: "\x02\x3a" }
   - { key: T, mods: Command, chars: "\x02\x63" }
   - { key: W, mods: Command, chars: "\x02\x78" }
+  - { key: Q, mods: Command, chars: "\x02\x64" }
   - { key: Z, mods: Command, chars: "\x02\x7a" }
