feat[tmux]: bind cmd+n and cmd+shift+n to new panes

--- a/mackup/.config/alacritty/alacritty.yml
+++ b/mackup/.config/alacritty/alacritty.yml
@@ -40,6 +40,8 @@ key_bindings:
   - { key: L, mods: Command, chars: "\x02\x4c" }
   - { key: LBracket, mods: Command, chars: "\x02\x5b" }
   - { key: LBracket, mods: Command|Shift, chars: "\x02\x70" }
+  - { key: N, mods: Command|Shift, chars: "\x02\x25" }
+  - { key: N, mods: Command, chars: "\x02\x22" }
   - { key: Q, mods: Command, chars: "\x02\x64" }
   - { key: RBracket, mods: Command|Shift, chars: "\x02\x6e" }
   - { key: S, mods: Command, chars: "\x1b\x3a\x77\x0a" }
