--- a/mackup/.yabairc
+++ b/mackup/.yabairc
@@ -46,5 +46,6 @@ yabai -m rule --add app="^Wally$" manage=off
 yabai -m rule --add app="^Pika$" manage=off
 yabai -m rule --add app="^balenaEtcher$" manage=off
 yabai -m rule --add app="^Creative Cloud$" manage=off
+yabai -m rule --add app="^Logi Options$" manage=off
 
 echo "~/.yabai config loaded successfully"
