--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -88,11 +88,15 @@ set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,b
 set -g status-left-length 30
 set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
 
-set -g status-right-length 50
+set -g status-right-length 100
 if-shell "uname | grep -q Linux" "set -g status-right '#[fg=cyan,bold,bg=default]%l:%M %a, %b %d '"
 if-shell "uname | grep -q Linux" "set -ga status-right '#[fg=black,bold,bg=cyan]  '"
 
-if-shell "uname | grep -q Darwin" "set -g status-right '#[fg=white,bold,bg=default]%l:%M %a, %b %d '"
+
+if-shell "uname | grep -q Darwin" "set -g status-right '#[fg=brightblack,bg=default]('"
+if-shell "uname | grep -q Darwin" "set -ga status-right '#(gitmux -cfg $HOME/.config/tmux/.gitmux.conf)'"
+if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=brightblack,bg=default]) '"
+if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=white,bold,bg=default]%l:%M %a, %b %d '"
 if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=black,bold,bg=white]  '"
 
 # Plugins configurations
