feat: add gitmux docs and backup config file

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -88,7 +88,7 @@ set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,b
 set -g status-left-length 30
 set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
 if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]['"
-if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/.gitmux.conf)'"
+if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'"
 if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
 
 set -g status-right-length 100
