--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -12,7 +12,7 @@ tmux:
     clean: ✔
   styles:
     state: '#[fg=red]'
-    branch: '#[fg=white]'
+    branch: '#[fg=magenta]'
     remote: '#[fg=cyan]'
     staged: '#[fg=green]'
     conflict: '#[fg=red]'
