feat[yabai]: ignore Alfred Preferences

--- a/mackup/.yabairc
+++ b/mackup/.yabairc
@@ -47,5 +47,6 @@ yabai -m rule --add app="^Pika$" manage=off
 yabai -m rule --add app="^balenaEtcher$" manage=off
 yabai -m rule --add app="^Creative Cloud$" manage=off
 yabai -m rule --add app="^Logi Options$" manage=off
+yabai -m rule --add app="^Alfred Preferences$" manage=off
 
 echo "~/.yabai config loaded successfully"
