feat[alacritty]: specify fish shell

--- a/mackup/.config/alacritty/alacritty.yml
+++ b/mackup/.config/alacritty/alacritty.yml
@@ -1,5 +1,8 @@
 live_config_reload: true
 
+shell:
+  program: /opt/homebrew/bin/fish
+
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>\t"
   save_to_clipboard: true
