feat[alacritty]: change aw active theme files

--- a/mackup/.config/alacritty/alacritty.yml
+++ b/mackup/.config/alacritty/alacritty.yml
@@ -54,6 +54,6 @@ key_bindings:
   - { key: Z, mods: Command, chars: "\x02\x7a" }
 
 import:
-  # TODO set default theme
-  - ~/.config/alacritty/theme.yml
+  - ~/.config/alacritty/aw/fallback.yml
+  - ~/.config/alacritty/aw/current.yml
 
