--- a/mackup/.skhdrc
+++ b/mackup/.skhdrc
@@ -6,29 +6,17 @@ alt - j : yabai -m window --focus south
 alt - k : yabai -m window --focus north
 alt - l : yabai -m window --focus east
 
-# for stream
-alt - d : yabai -m config left_padding 655 
-alt - a : yabai -m config left_padding 15 
-
-# swap window
+# swap managed window
 shift + alt - h : yabai -m window --swap west
 shift + alt - j : yabai -m window --swap south
 shift + alt - k : yabai -m window --swap north
 shift + alt - l : yabai -m window --swap east
 
-# increase window size
-shift + alt - a : yabai -m window --resize left:-20:0
-shift + alt - w : yabai -m window --resize top:0:-20
-
-# decrease window size
-shift + cmd - s : yabai -m window --resize bottom:0:-20
-shift + cmd - w : yabai -m window --resize top:0:20
-
-# move window
-#shift + cmd - h : yabai -m window --warp west
-#shift + cmd - j : yabai -m window --warp south
-#shift + cmd - k : yabai -m window --warp north
-#shift + cmd - l : yabai -m window --warp east
+# move managed window
+shift + alt + ctrl - h : yabai -m window --warp west
+shift + alt + ctrl - j : yabai -m window --warp south
+shift + alt + ctrl - k : yabai -m window --warp north
+shift + alt + ctrl - l : yabai -m window --warp east
 
 # rotate tree
 alt - r : yabai -m space --rotate 90
@@ -46,8 +34,10 @@ alt - t : yabai -m window --toggle float;\
 # toggle window split type
 alt - e : yabai -m window --toggle split
 
-# move window and focus desktop
+# balance size of windows
 shift + alt - 0 : yabai -m space --balance
+
+# move window and focus desktop
 shift + alt - 1 : yabai -m window --space 1; yabai -m space --focus 1
 shift + alt - 2 : yabai -m window --space 2; yabai -m space --focus 2
 shift + alt - 3 : yabai -m window --space 3; yabai -m space --focus 3
@@ -57,3 +47,25 @@ shift + alt - 6 : yabai -m window --space 6; yabai -m space --focus 6
 shift + alt - 7 : yabai -m window --space 7; yabai -m space --focus 7
 shift + alt - 8 : yabai -m window --space 8; yabai -m space --focus 8
 shift + alt - 9 : yabai -m window --space 9; yabai -m space --focus 9
+
+# create desktop, move window and follow focus - uses jq for parsing json (brew install jq)
+shift + alt - n : yabai -m space --create && \
+                   index="$(yabai -m query --spaces --display | jq 'map(select(."native-fullscreen" == 0))[-1].index')" && \
+                   yabai -m window --space "${index}" && \
+                   yabai -m space --focus "${index}"
+
+# fast focus desktop
+alt - 0 : yabai -m space --focus recent
+
+# send window to monitor and follow focus
+shift + alt - n : yabai -m window --display next; yabai -m display --focus next
+shift + alt - p : yabai -m window --display previous; yabai -m display --focus previous
+
+# increase window size
+shift + alt - w : yabai -m window --resize top:0:-20
+shift + alt - d : yabai -m window --resize left:-20:0
+
+# decrease window size
+shift + alt - s : yabai -m window --resize bottom:0:-20
+shift + alt - a : yabai -m window --resize top:0:20
+
