feat[docker]: update config

--- a/mackup/.docker/config.json
+++ b/mackup/.docker/config.json
@@ -1,9 +1,11 @@
 {
-	"auths": {
-		"https://index.docker.io/v1/": {}
-	},
-	"credsStore": "desktop",
-	"experimental": "enabled",
-	"stackOrchestrator": "swarm",
-	"currentContext": "default"
+  "credsStore" : "desktop",
+  "experimental" : "enabled",
+  "auths" : {
+    "https://index.docker.io/v1/" : {
+
+    }
+  },
+  "currentContext" : "default",
+  "stackOrchestrator" : "swarm"
 }
