--- a/mackup/.gitconfig
+++ b/mackup/.gitconfig
@@ -1,21 +1,24 @@
-[url "git@github.com:"]
-	insteadOf = https://github.com/
 [user]
 	name = Josh Medeski
 	email = josh.medeski@gmail.com
+[url "git@github.com:"]
+	insteadOf = https://github.com/
 [core]
-	editor = nvim
-	pager = delta
-	excludesfile = /Users/joshmedeski/.gitignore
-[interactive]
-	diffFilter = delta --color-only
-[delta]
-	features = side-by-side line-numbers decorations
-	syntax-theme = Nord
-	whitespace-error-style = 22 reverse
-[delta "decorations"]
-	commit-decoration-style = bold yellow box ul
-	file-style = bold yellow ul
-	file-decoration-style = none
-[diff]
-	colorMoved = default
+ 	editor = nvim
+ 	excludesfile = /Users/joshmedeski/.gitignore
+	pager = diff-so-fancy | less --tabs=2 -RFX
+[color]
+	ui = true
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = 11
+	frag = blue bold
+	func = 146 bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
