feat[tmux]: replace url plugin

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -85,9 +85,9 @@ set -g pane-border-style "fg=white,bg=default"
 set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
 set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
 
-set -g status-left-length 30
+set -g status-left-length 50
 set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
-if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]['"
+if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,nobold,bg=default]['"
 if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'"
 if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
 
@@ -105,8 +105,8 @@ set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
 # Plugins
 set -g @plugin 'carlocab/tmux-nvr'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'joshmedeski/tmux-fzf-url'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tpm'
 
 # Plugins Initialization (end of file)
