feat[tmux]: update gitmux symbols

--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -1,22 +1,22 @@
 tmux:
   symbols:
-    branch: ''
+    branch: ' '
     hashprefix: ':'
-    ahead: '↑'
-    behind: '↓'
-    staged: '● '
-    conflict: '✖ '
-    modified: '✚ '
-    untracked: '… '
-    stashed: '⚑ '
-    clean: ✔
+    ahead: ''
+    behind: ''
+    staged: ' '
+    conflict: ' '
+    modified: ' '
+    untracked: ' '
+    stashed: 'ﮅ '
+    clean: ' '
   styles:
     state: '#[fg=red]'
     branch: '#[fg=white]'
     remote: '#[fg=cyan]'
     staged: '#[fg=green]'
     conflict: '#[fg=red]'
-    modified: '#[fg=red]'
+    modified: '#[fg=yellow]'
     untracked: '#[fg=yellow]'
     stashed: '#[fg=blue]'
     clean: '#[fg=green]'
