--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # set the terminals
-set-option -g default-terminal "screen-256color"
-set-option -sa terminal-overrides ',xterm-256color:RGB'
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # set default shell by OS
 if-shell "uname | grep -q Darwin" "set -g default-shell /opt/homebrew/bin/fish"
