feat[tmux]: update gitmux colors and symbols

--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -6,8 +6,8 @@ tmux:
     behind: ''
     staged: ' '
     conflict: ' '
-    modified: ' '
     untracked: ' '
+    modified: ' '
     stashed: 'ﮅ '
     clean: ' '
   styles:
@@ -17,7 +17,7 @@ tmux:
     staged: '#[fg=green]'
     conflict: '#[fg=red]'
     modified: '#[fg=yellow]'
-    untracked: '#[fg=yellow]'
+    untracked: '#[fg=green]'
     stashed: '#[fg=blue]'
     clean: '#[fg=green]'
   layout: [branch, ' ', flags]
