feat[tmux/fish]: update gitmux and starship prompts for simpler git

--- a/mackup/.config/starship.toml
+++ b/mackup/.config/starship.toml
@@ -16,3 +16,17 @@ disabled = true
 [docker_context]
 disabled = true
 
+[git_branch]
+disabled = true
+
+[git_commit]
+disabled = true
+
+[git_state]
+disabled = true
+
+[git_metrics]
+disabled = true
+
+[git_status]
+disabled = true
