--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -2,8 +2,8 @@ tmux:
   symbols:
     branch: ' '
     hashprefix: ':'
-    ahead: ''
-    behind: ''
+    ahead: ' '
+    behind: ' '
     staged: ' '
     conflict: ' '
     untracked: ' '
@@ -12,14 +12,15 @@ tmux:
     clean: ' '
   styles:
     state: '#[fg=red]'
-    branch: '#[fg=white]'
+    branch: '#[fg=magenta]'
     remote: '#[fg=cyan]'
     staged: '#[fg=green]'
     conflict: '#[fg=red]'
     modified: '#[fg=yellow]'
     untracked: '#[fg=green]'
-    stashed: '#[fg=blue]'
-    clean: '#[fg=green]'
-  layout: [branch, ' ', flags]
+    stashed: '#[fg=gray]'
+    clean: '#[fg=gray]'
+    divergence: '#[fg=cyan]'
+  layout: [branch, divergence, ' ', flags]
   options:
     branch_max_len: 0
