--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -83,10 +83,10 @@ set -g status-position top
 set -g pane-active-border-style "fg=green,bg=default"
 set -g pane-border-style "fg=white,bg=default"
 set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
-set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
+set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=green,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
 
 set -g status-left-length 50
-set -g status-left "#[fg=cyan,bold,bg=default] #S " # session name
+set -g status-left "#[fg=blue,bold,bg=default]#S " # session name
 if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,nobold,bg=default]['"
 if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'"
 if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
