--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -2,17 +2,17 @@ tmux:
   symbols:
     branch: ' '
     hashprefix: ':'
-    ahead: ' '
-    behind: ' '
-    staged: ' '
-    conflict: ' '
+    ahead: ' '
+    behind: ' '
+    staged: ' '
+    conflict: ' '
     untracked: ' '
     modified: ' '
     stashed: 'ﮅ '
-    clean: ' '
+    clean: ''
   styles:
     state: '#[fg=red]'
-    branch: '#[fg=magenta]'
+    branch: '#[fg=white]'
     remote: '#[fg=cyan]'
     staged: '#[fg=green]'
     conflict: '#[fg=red]'
