--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -80,10 +80,10 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # Theme
 set -g status-style 'bg=default,fg=white' # transparent status bar
 set -g status-position top 
-set -g pane-active-border-style "fg=green,bg=default"
+set -g pane-active-border-style "fg=magenta,bg=default"
 set -g pane-border-style "fg=white,bg=default"
 set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
-set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=green,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
+set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
 
 set -g status-left-length 50
 set -g status-left "#[fg=blue,bold,bg=default]#S " # session name
@@ -92,12 +92,7 @@ if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.con
 if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
 
 set -g status-right-length 100
-
-if-shell "uname | grep -q Linux" "set -g status-right '#[fg=cyan,bold,bg=default]%l:%M %a, %b %d '"
-if-shell "uname | grep -q Linux" "set -ga status-right '#[fg=black,bold,bg=cyan]  '"
-
-if-shell "uname | grep -q Darwin" "set -g status-right '#[fg=white,bold,bg=default]%l:%M %a, %b %d '"
-if-shell "uname | grep -q Darwin" "set -ga status-right '#[fg=black,bold,bg=white]  '"
+set -g status-right "" # empty
 
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
