feat[tmux]: don't detach when a session is destroyed

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -2,6 +2,8 @@
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+set-option -g detach-on-destroy off
+
 # set default shell by OS
 if-shell "uname | grep -q Darwin" "set -g default-shell /opt/homebrew/bin/fish"
 if-shell "uname | grep -q Linux" "set -g default-shell /home/linuxbrew/.linuxbrew/bin/fish"
