feat: add tt popup

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -56,9 +56,9 @@ bind C-n next-window
 bind C-p previous-window
 bind g new-window -c "#{pane_current_path}" -n "lazygit" lazygit
 bind K new-window -c "#{pane_current_path}" -n "lazydocker" lazydocker
-bind S new-window -c "#{pane_current_path}" -n "spotify" spt
 bind h select-pane -L
 bind j select-pane -D
+bind T display-popup -E "~/bin/tt"
 bind k select-pane -U
 bind l select-pane -R
 bind v new-window -c "#{pane_current_path}" nvim +Files
