--- a/mackup/.config/alacritty/alacritty.yml
+++ b/mackup/.config/alacritty/alacritty.yml
@@ -58,6 +58,6 @@ key_bindings:
   - { key: S, mods: Command, chars: "\e:w\n" }
   - { key: Semicolon, mods: Command, chars: "\x02:" }
   - { key: T, mods: Command, chars: "\x02c" }
-  - { key: T, mods: Command|Shift, chars: "\x02!" }
+  - { key: J, mods: Command, chars: "\x02\x54" }
   - { key: W, mods: Command, chars: "\x02x" }
   - { key: Z, mods: Command, chars: "\x02z" }
