feat[tmux]: reduce gitmux timing

--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -90,7 +90,7 @@ set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,b
 set -g status-left-length 50
 set -g status-left "#[fg=blue,bold,bg=default]#S " # session name
 if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,nobold,bg=default]['"
-if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -cfg $HOME/.config/tmux/gitmux.conf)'"
+if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf)'"
 if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
 
 set -g status-right-length 100
