feat[gitmux]: adjust ui

--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -1,6 +1,6 @@
 tmux:
   symbols:
-    branch: ' '
+    branch: ''
     hashprefix: ':'
     ahead: ' '
     behind: ' '
@@ -12,8 +12,7 @@ tmux:
     clean: ''
   styles:
     state: '#[fg=red]'
-    branch: '#[fg=white]'
-    remote: '#[fg=cyan]'
+    branch: '#[fg=cyan,bold]'
     staged: '#[fg=green]'
     conflict: '#[fg=red]'
     modified: '#[fg=yellow]'
