--- a/mackup/.config/tmux/tmux.conf
+++ b/mackup/.config/tmux/tmux.conf
@@ -82,19 +82,29 @@ bind-key -T copy-mode-vi 'C-\' select-pane -l
 # Theme
 set -g status-style 'bg=default,fg=white' # transparent status bar
 set -g status-position top 
-set -g pane-active-border-style "fg=magenta,bg=default"
-set -g pane-border-style "fg=white,bg=default"
-set -g window-status-format "#[fg=brightblack,bg=default](#[fg=white,bg=default]#I #F #W#[fg=brightblack,bg=default])"
-set -g window-status-current-format "#[fg=brightblack,bg=default](#[fg=magenta,bold,bg=default]#I #F #W#[fg=brightblack,nobold,bg=default])"
+set -g pane-active-border-style "fg=white,bg=default"
+set -g pane-border-style "fg=brightblack,bg=default"
 
 set -g status-left-length 50
-set -g status-left "#[fg=blue,bold,bg=default]#S " # session name
-if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,nobold,bg=default]['"
-if-shell "uname | grep -q Darwin" "set -ga status-left '#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf)'"
-if-shell "uname | grep -q Darwin" "set -ga status-left '#[fg=brightblack,bg=default]] '"
+set -g status-left "#[fg=blue,bold]#S " # session name
+set -ga status-left "#[fg=brightblack,nobold]("
+set -ga status-left "#[fg=white,bold]שׂ "
+set -ga status-left "#(gitmux -timeout 300ms -cfg $HOME/.config/tmux/gitmux.conf)"
+set -ga status-left "#[fg=brightblack,nobold,bg=default]) "
 
 set -g status-right-length 100
 set -g status-right "" # empty
+
+set -g window-status-format "#[fg=brightblack,nobold,bg=default]["
+set -ga window-status-format "#[fg=brightblack,bg=default]#I #F "
+set -ga window-status-format "#[fg=white,bg=default]#W"
+set -ga window-status-format "#[fg=brightblack,nobold,bg=default]]"
+
+# set -g window-status-current-format "#[fg=white,bold,bg=#1e1e2e] #I #F #W "
+set -g window-status-current-format "#[fg=white,nobold,bg=default]["
+set -ga window-status-current-format "#[fg=magenta,bold,bg=default]#I #F "
+set -ga window-status-current-format "#[fg=magenta,bold,bg=default]#W"
+set -ga window-status-current-format "#[fg=white,nobold,bg=default]]"
 
 # Plugins configurations
 set -g @emulate-scroll-for-no-mouse-alternate-buffer 'on'
