--- a/mackup/.gitconfig
+++ b/mackup/.gitconfig
@@ -6,16 +6,15 @@
 [core]
  	editor = nvim
  	excludesfile = /Users/joshmedeski/.gitignore
-	#pager = difft
-[pager]
-	difftool = true
+	pager = delta
+[interactive]
+	diffFilter = delta --color-only
 [color]
 	ui = true
-[pager]
-	difftool = true
 [diff]
-	tool = difftastic
-[difftool]
-	prompt = false
-[difftool "difftastic"]
-	cmd = difft "$LOCAL" "$REMOTE"
+	colorMoved = default
+[delta]
+	navigate = true
+	line-numbers = true
+[merge]
+	conflictstyle = diff3
