--- a/mackup/.config/tmux/gitmux.conf
+++ b/mackup/.config/tmux/gitmux.conf
@@ -11,15 +11,15 @@ tmux:
     stashed: 'ﮅ '
     clean: ''
   styles:
-    state: '#[fg=red]'
-    branch: '#[fg=cyan,bold]'
-    staged: '#[fg=green]'
-    conflict: '#[fg=red]'
-    modified: '#[fg=yellow]'
-    untracked: '#[fg=green]'
-    stashed: '#[fg=gray]'
-    clean: '#[fg=gray]'
-    divergence: '#[fg=cyan]'
+    state: '#[fg=red,nobold]'
+    branch: '#[fg=white,nobold]'
+    staged: '#[fg=green,nobold]'
+    conflict: '#[fg=red,nobold]'
+    modified: '#[fg=yellow,nobold]'
+    untracked: '#[fg=green,nobold]'
+    stashed: '#[fg=gray,nobold]'
+    clean: '#[fg=gray,nobold]'
+    divergence: '#[fg=cyan,nobold]'
   layout: [branch, divergence, ' ', flags]
   options:
     branch_max_len: 0
